data/test/method_as_function/positive/7001.js
// This tests path parameters of type string
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/customers/~j0hn_d0e.-');