data/test/method_as_function/negative/7002.js
// This tests illegal string path parameters
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/customers/john'+'doe');